feat: added docs to register and login handlers
